# oracli

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  oracli.py  pyproject.toml  test_oracli.py
.github/workflows/: run-tests.yml
oracli/: gen.py  test_oracli.py
oracli/tests/: test_oracli.py
